// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokensPerEth renders when \`currencyAmount\` is 1 1`] = `
<div>
  Receive 100 TKN
</div>
`;

exports[`TokensPerEth renders when \`currencyAmount\` is undefined 1`] = `
<div>
  Receive 100 TKN/1 ETH
</div>
`;
